' Generated by UML Generator
' Encoded: bLJHQjim57ttLmZsuh0cP7iCMsYMhH1eM4ZANiOOr_9DAYPRvaekR6tpxRkI4zbEssLziu-kpZdtwaYNrW6vkj29_QNA2WWA8JLOEtEEL5OxN4XJRjGV5EFaLkKef2AfCKb2bLY2AiLz8iJRUsPoIZwAYen42tHZScFJ2dR6JiIg0JEDttyC9kBEgBotgM2U56Z7fHiMBdTjsMFKghM3JohJoZYK46I7kGAxHaTWpKIeqdci8fJANAkC6CjDpQeU7dh54vAKkvDOENFKlH1RbBVG_fuAN8Xdw0UUsXa7EXrq91bgQ3pQVFbs8BFC9rqpQR7Y4OLctcmDsugL39ow2qLTVnxW4KFE9Pan6g4K7yKMj0qjn_aoaUCYkl8ADZJ2TU_YMBo7SxDugSaxq2e7yk31WaTtM281hNbMcUdqpql7XAG5EWw9ruuQRJPsw8BR_bv6vmURJnQklDi-gkmgJAThBWRA2ozAAqbLVA1DZeUo1jvT81yHnaJ56NNApqVd2TNhOjAQN893Kg0RXyNX3_aSPqJm-rfPz-5pO9lst1xtdRVwJyxNsUO-aROWiNFfW_5zJEFDR3FxkVco_hQOBxuU6JcFuz7u_R61_N-bPFzi-FOlXsylGSjQ0ytvjJ6zVbf_MqD-841BlZOcBU8rx_OPdhxHQDffCpbzeeR3XsaumIHSyj7eeLT-6i1-UJpr5hx4CkV7-Yy
' URL: http://www.plantuml.com/plantuml/uml/bLJHQjim57ttLmZsuh0cP7iCMsYMhH1eM4ZANiOOr_9DAYPRvaekR6tpxRkI4zbEssLziu-kpZdtwaYNrW6vkj29_QNA2WWA8JLOEtEEL5OxN4XJRjGV5EFaLkKef2AfCKb2bLY2AiLz8iJRUsPoIZwAYen42tHZScFJ2dR6JiIg0JEDttyC9kBEgBotgM2U56Z7fHiMBdTjsMFKghM3JohJoZYK46I7kGAxHaTWpKIeqdci8fJANAkC6CjDpQeU7dh54vAKkvDOENFKlH1RbBVG_fuAN8Xdw0UUsXa7EXrq91bgQ3pQVFbs8BFC9rqpQR7Y4OLctcmDsugL39ow2qLTVnxW4KFE9Pan6g4K7yKMj0qjn_aoaUCYkl8ADZJ2TU_YMBo7SxDugSaxq2e7yk31WaTtM281hNbMcUdqpql7XAG5EWw9ruuQRJPsw8BR_bv6vmURJnQklDi-gkmgJAThBWRA2ozAAqbLVA1DZeUo1jvT81yHnaJ56NNApqVd2TNhOjAQN893Kg0RXyNX3_aSPqJm-rfPz-5pO9lst1xtdRVwJyxNsUO-aROWiNFfW_5zJEFDR3FxkVco_hQOBxuU6JcFuz7u_R61_N-bPFzi-FOlXsylGSjQ0ytvjJ6zVbf_MqD-841BlZOcBU8rx_OPdhxHQDffCpbzeeR3XsaumIHSyj7eeLT-6i1-UJpr5hx4CkV7-Yy
' Generated on: 2026-06-05T22:30:04.236191400

@startuml
skinparam classAttributeIconSize 0
hide circle

class Main {
  +{static} procesarTodos(pagos: Procesable[]): void
  +{static} main(args: String[]): void
}

class MultaBiblioteca {
  -diasRetraso: int
  -precioLibro: double
  --
  +MultaBiblioteca(concepto: String, fecha: String, diasRetraso: int, precioLibro: double)
  +total(): double
  +toString(): String
}

abstract class Pago {
  #folio: String
  #concepto: String
  #fecha: String
  #pagado: boolean = false
  -{static} contadorFolios: int = 1
  --
  +Pago(concepto: String, fecha: String)
  +total(): double
  +validar(): boolean
  +generarRecibo(): String
  +procesar(metodoPago: String): void
  +getFolio(): String
  +getConcepto(): String
  +getFecha(): String
  +isPagado(): boolean
}

class PagoInscripcion {
  -cuatrimestre: int
  --
  +PagoInscripcion(concepto: String, fecha: String, cuatrimestre: int)
  +total(): double
  +toString(): String
}

class PagoMaterial {
  -materiales: ArrayList<Double>
  --
  +PagoMaterial(concepto: String, fecha: String, materiales: ArrayList<Double>)
  +total(): double
  +toString(): String
}

interface Procesable {
  ~{static} TASA_SERVICIO: double = 0.02
  --
  ~procesar(metodoPago: String): void
  ~validar(): boolean
  ~generarRecibo(): String
  ~calcularCargo(): double
  ~{static} formatearMonto(m: double): String
}

Main ..> Procesable
MultaBiblioteca --|> Pago
Pago ..|> Procesable
PagoInscripcion --|> Pago
PagoMaterial --|> Pago
@enduml